set GM client button still broken

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation('org.imgscalr:imgscalr-lib:4.2')
     implementation('com.github.TimEtOff:TimUtilsLib:8ebcad452b312494aa1384fa739af9f9b293d26d')
     implementation('fr.flowarg:openlauncherlib:3.2.6')
+    implementation("net.dv8tion:JDA:5.0.0-beta.11")
 }
 
 test {
